Add div-salad challenge

--- a/html-and-web/html-and-the-web_div-salad/index.html
+++ b/html-and-web/html-and-the-web_div-salad/index.html
@@ -13,59 +13,59 @@ Let's fix this mess!
   </head>
   <!--someone forgot to wrap the content of our webpage with an HTML element,
 	which one was it again?-->
-  <body>
-    <head>
-      <title>Jane Doe</title>
+  <div>
+    <div>
+      <div>Jane Doe</div>
       <!--Which elements could be used to link to parts of the webpage,
 		which appear below?-->
-      <nav id="nav">
-        <a href="#about-me">About Me</a>
-        <a href="#contact">Contact</a>
-        <a href="#skills">Skillset</a>
-      </nav>
-    </head>
+      <div id="nav">
+        <div>About Me</div>
+        <div>Contact</div>
+        <div>Skillset</div>
+      </div>
+    </div>
     <!--Looks like the following part is the central content of our webpage.-->
-    <main>
-      <section id="about-me">
-        <h1>About me</h1>
-        <p>
+    <div>
+      <div id="about-me">
+        <div>About me</div>
+        <div>
           Hi there! Welcome to my personal website. Here is gathered the most
           important information about me. If you want to work with me or get to
           know me, please don't hesitate to get in contact.
-        </p>
+        </div>
         <!--What element could be used to combine an image with a descriptive caption?-->
-        <figure>
+        <div>
           <img
             src="https://source.unsplash.com/random/400x300?fruit"
             alt="a random picture"
           />
-          <figcaption>
+          <div>
             A random picture, because I would like to maintain my privacy and
             let my code speak for me, instead of images.
-          </figcaption>
-        </figure>
-      </section>
+          </div>
+        </div>
+      </div>
 
-      <section id="contact">
-        <h1>Contact</h1>
+      <div id="contact">
+        <div>Contact</div>
         <!--When clicking on these element, nothing happens! But I want to be redirected to the other websites. Why is it not working?-->
-        <a href="https://github.com/spiced-academy">GitHub</a>
-        <a href="https://de.linkedin.com/">LinkedIn</a>
-        <a href="https://codesandbox.io/">CodeSandbox</a>
-      </section>
+        <div href="https://github.com/spiced-academy">GitHub</div>
+        <div href="https://de.linkedin.com/">LinkedIn</div>
+        <div href="https://codesandbox.io/">CodeSandbox</div>
+      </div>
 
-      <section id="skills">
-        <h1>Skillset</h1>
+      <div id="skills">
+        <div>Skillset</div>
         <!--This part could use some bulletpoint to be more structured-->
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>React</li>
-          <li>Painting rainbows</li>
-          <li>Party</li>
-        </ul>
-      </section>
-    </head>
-  </body>
+        <div>
+          <div>HTML</div>
+          <div>CSS</div>
+          <div>JavaScript</div>
+          <div>React</div>
+          <div>Painting rainbows</div>
+          <div>Party</div>
+        </div>
+      </div>
+    </div>
+  </div>
 </html>
